--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 
 .green {
   color:rgb(3, 140, 0);
-  font-family:"arial";
+  font-family:"monospace";
   font-size:20px;
 }
-.div {
+
+.quotediv {
     float:center;
     text-align:center;
 }
@@ -17,11 +18,11 @@
   color:#0067C6;
   font-size:15px;
 }
-.bluebackground{
-  background-color:#D6FFF2
-
+.greenbackground{
+  background-color:#D6FFF2;
 }
 
 body {
-  margin-top: 50px
+  margin-top: 50px;
+  background-color: HONEYDEW;
 }
